<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Selfoss</string>
    <string name="selfossInstanceUrl">Selfoss instance URL</string>
    <string name="requireAuthentication">Require authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="validate">Validate</string>
    <string name="checking">Checking…</string>
    <string name="success">Success !</string>
    <string name="error_url">Unable to reach the server.</string>
    <string name="error_usernamePassword">Authentication failed</string>
    <string name="newest">Newest</string>
    <string name="starred">Starred</string>
    <string name="unread">Unread</string>
    <string name="tags">Tags</string>
    <string name="error">Error !</string>
    <string name="certificate_error">Certificate error !</string>
    <string name="certificate_error_message">Certificate of %s can\'t be verified.\nTrust it anyway ?</string>
    <string name="allTags">All tags</string>
    <string name="noArticle">No article.</string>
    <string name="synchronize">Synchronize</string>
    <string name="loading">Loading…</string>
    <string name="noMoreArticle">No more article.</string>
    <string name="error_loading">An error occurred.\nTouch to try again.</string>
    <string name="openInBrowser">Open in browser</string>
    <string name="syncPeriod">Sync every</string>
    <string name="fiveMin">5 minutes</string>
    <string name="fifteenMin">15 minutes</string>
    <string name="thirtyMin">30 minutes</string>
    <string name="oneHour">1 hours</string>
    <string name="http">HTTP</string>
    <string name="https">HTTPS</string>
    <string name="n_articles">%d articles</string>
    <string name="markStarred">Mark starred</string>
    <string name="markRead">Mark read</string>
    <string name="markUnread">Mark unread</string>
    <string name="markUnstarred">Mark unstarred</string>
    <string name="markAllRead">Mark all read</string>
    <string name="sources">Sources</string>
    <string name="allSources">All sources</string>
    <string name="share">Share</string>
    <string name="error_usernameEmpty">Username is required</string>
    <string name="never">Never</string>
	<string name="newVersion_2_11_message">Version 2.11 of Selfoss server has been released !\nIt enables the app to sync more efficiently.\nSo don\'t forget to upgrade !</string>
	<string name="newVersion_title">New version released !</string>
	<string name="remindMeLater">Remind me later</string>
	<string name="gotIt">Got it !</string>
	<string name="error_urlEmpty">Set the url you type in the browser</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="finish">Finish</string>
	<string name="account_url_title">Your Selfoss server</string>
	<string name="account_url_explanation">Enter the url you type in your browser.</string>
	<string name="account_auth_title">Your credentials</string>
	<string name="account_syncPeriod_title">Automatic synchronization</string>
	<string name="automaticSynchronization">Automatic synchronization</string>
	<string name="min">min</string>
	<string name="syncOverWifiOnly">Synchronization via wifi only</string>

</resources>
