<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/markStarred"
        android:title="@string/markStarred"
        android:icon="@drawable/ic_menu_starred"
        android:showAsAction="always" />

    <item
        android:id="@+id/markRead"
        android:title="@string/markRead"
        android:icon="@drawable/ic_menu_read"
        android:showAsAction="always"/>

	<item
		android:id="@+id/browser"
	    android:icon="@drawable/ic_menu_browser"
	    android:title="@string/openInBrowser"
		android:showAsAction="always"/>

    <item
        android:id="@+id/share"
        android:showAsAction="ifRoom"
        android:title="@string/share"
        android:actionProviderClass=
            "android.widget.ShareActionProvider" />

</menu>